2008-01-11  Sven Herzberg  <herzi@gnome-de.org>

	Add a make rule for debian packages. Based on the Maemo port of
	Monkey-Bubble which was created by Jouni Roivas.

	* Makefile.am: added a rule to build the debian package easily

2008-01-11  Sven Herzberg  <herzi@gnome-de.org>

	Repair the .deb build system

	* debian/control: fix the file to get monkey-bubble built again

2008-01-11  Sven Herzberg  <herzi@gnome-de.org>

	Dropped the old xpm and use the one from the debian folder now. This
	makes the tarball a little smaller and will result in less effort for
	debian packaging.

	* debian/monkey-bubble.xpm: moved into pixmaps
	* debian/rules: don't install the xpm file anymore, it's done
	automatically now
	* pixmaps/Makefile.am: install the .xpm into $(datadir)/monkey-bubble
	* pixmaps/monkey-bubble-icon.xpm: deleted the old, bad icon
	* pixmaps/monkey-bubble.xpm: moved from debian/

2008-01-11  Sven Herzberg  <herzi@gnome-de.org>

	For Maemo, specify the full path of the binary in the .desktop file.
	Based on the Maemo port of Monkey-Bubble which was created by Jouni
	Roivas.

	* Makefile.am: updated the GNOME rule to build the file properly
	* monkey-bubble.desktop.in.in: added the substitute pattern to the
	file

2008-01-11  Sven Herzberg  <herzi@gnome-de.org>

	Added another preprocessing step as Maemo requires the full path to be
	given in the .desktop file.

	* Makefile.am: added the rules to properly build the desktop file with
	another preprocessing step
	* monkey-bubble.desktop.in: renamed
	* monkey-bubble.desktop.in.in: new name of the file

2008-01-11  Sven Herzberg  <herzi@gnome-de.org>

	Clean up the build tree properly.

	* data/Makefile.am: added $(dbus_DATA) to CLEANFILES

2008-01-10  Sven Herzberg  <herzi@gnome-de.org>

	Install a D-Bus service file for Maemo to get an idea about restarting
	Monkey-Bubble. Based on the Maemo port of Monkey-Bubble which was
	created by Jouni Roivas.
